--- a/.config/i3/config
+++ b/.config/i3/config
@@ -225,8 +225,8 @@ bindsym $mod+Shift+XF86Back	move container to workspace prev
 bindsym $mod+XF86Forward	workspace next
 bindsym $mod+Shift+XF86Forward	move container to workspace next
 bindsym $mod+semicolon		workspace next
-bindsym $mod+apostrophe		split horizontal ;; exec $term
-bindsym $mod+slash		split vertical ;; exec $term
+#bindsym $mod+apostrophe	split horizontal ;; exec $term
+#bindsym $mod+slash		split vertical ;; exec $term
 bindsym $mod+Shift+slash	kill
 bindsym $mod+backslash		workspace back_and_forth
 
@@ -243,12 +243,12 @@ set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1		workspace $ws1
-bindsym $mod+2		workspace $ws2
+bindcode $mod+11	workspace $ws2
 bindsym $mod+3		workspace $ws3
 bindsym $mod+4		workspace $ws4
 bindsym $mod+5		workspace $ws5
 bindsym $mod+6		workspace $ws6
-bindsym $mod+7		workspace $ws7
+bindcode $mod+16	workspace $ws7
 bindsym $mod+8		workspace $ws8
 bindsym $mod+9		workspace $ws9
 bindsym $mod+0		workspace $ws10
